--- a/adrsm/meta.yaml
+++ b/adrsm/meta.yaml
@@ -1,15 +1,16 @@
 package:
   name: adrsm
-  version: "0.3"
+  version: "0.4"
 
 source:
-  git_rev: "v0.3"
+  git_rev: "v0.4"
   git_url: https://github.com/maxibor/adrsm.git
 
 requirements:
   run:
-    - python
+    - python 3.6.*
     - numpy
+    - scipy
 
 
 test:
