--- a/adrsm/meta.yaml
+++ b/adrsm/meta.yaml
@@ -1,9 +1,9 @@
 package:
   name: adrsm
-  version: "0.41"
+  version: "0.6"
 
 source:
-  git_rev: "v0.41"
+  git_rev: "v0.6"
   git_url: https://github.com/maxibor/adrsm.git
 
 requirements:
@@ -11,6 +11,7 @@ requirements:
     - python 3.6.*
     - numpy
     - scipy
+    - requests
 
 
 test:
