--- a/adrsm/meta.yaml
+++ b/adrsm/meta.yaml
@@ -1,10 +1,9 @@
 package:
   name: adrsm
-  version: "0.8"
+  version: "0.9.1"
 
 source:
-  git_rev: "v0.8"
-  git_url: https://github.com/maxibor/adrsm.git
+  path: /Users/borry/Documents/GitHub/adrsm
 
 requirements:
   run:
@@ -15,6 +14,8 @@ requirements:
 
 
 test:
+  source_files:
+    - data
   commands:
     - adrsm --help
 
